Date 
Version 1.6.1
- Fixed bug when sender and recipient alias contained XML special characters like &
- Fixed warning with transaction service and not correctly set parenthesis

Date 2020-03-16
Version 1.6.0
- Updated namespaces
- Added composer package for tests

Date 2020-02-14  
Version 1.5.6
- Added getState for mailings
- Added getSchedule and deleteSchedule for regular mailings

Date  2020-01-20
Version 1.5.5
- Changed url encode scheme for contact fields so spaces are allowed
- Added method for setting "ignore_permissions" (trigger mails, only)

Date 2019-11-08
Version 1.5.4
- Fixed bug with deserializing mailing subjects
- Added method for getting sender alias

Date 2019-10-16
Version 1.5.3
- Fixed bug with transaction types de-/serialization not handling boolean values correctly (storeonly and required attributes)

Date 2019-09-02
Version 1.5.2
- Fixed deserialization bug with transaction types having SimpleXML objects as values instead of just the content

Date 2019-07-08
Version 1.5.1
- Set default value for getting contact filters to 100
- Added deserialization of previewtext for properly retrieving the mailing preview text
- Added method to retrieve mailings by state (thanks to 'Verlagsgruppe Hüthig Jehle Rehm GmbH')

Date 2019-04-05
Version 1.5.0
- Added CRUD methods for managing account placeholders
- Added methods for getting/settung mailing preview texts

Date 2019-01-30
Version 1.4.1
- Added more details to debug output in case of cURL errors, e.g. certificate problems


Date: 2018-12-10
Version 1.4.0
- Added description for transaction type and transaction type attributes when creating or retrieving a type
- Added 'date' as attribute type
- Added attributes in analytics report service (goals, timestamps as epoch and sql timestamps and external id)
- Fixed missing parameter 'nlaccountid' when unsubscribing by email
- Fixed path for creating contacts from /contacts to /contacts/email